--- a/aula_virtual_bienvenida.html
+++ b/aula_virtual_bienvenida.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>📤 Egresar/ Taller de apoyo metodológico transdisciplinar para egresantes de la FFyH </title>
+    <title>📤 Egresar – Taller de apoyo metodológico transdisciplinar para egresantes de la FFyH </title>
     <style>
         /* Variables de color académico */
         :root {
@@ -451,7 +451,7 @@
     <!-- Breadcrumb -->
     <div class="breadcrumb">
         <div class="breadcrumb-content">
-            Inicio > Mis cursos > 📤 Egresar/ Taller de apoyo metodológico transdisciplinar para egresantes de la FFyH
+            Inicio > Mis cursos > 📤 Egresar – Taller de apoyo metodológico transdisciplinar para egresantes de la FFyH
         </div>
     </div>
 
