--- a/aula_virtual_bienvenida.html
+++ b/aula_virtual_bienvenida.html
@@ -460,7 +460,7 @@
         <!-- Título del curso -->
         <section class="course-title">
             <h1>📤 Egresar/ Taller de apoyo metodológico transdisciplinar para egresantes de la FFyH</h1>
-            <p class="course-subtitle">Un recorrido integral por las competencias investigativas para la elaboración de tesis en educación a distancia</p>
+            <p class="course-subtitle">Una propuesta de educación a distancia para acompañarte en los primeros pasos de investigación en el fin de la carrera</p>
             <div class="course-tags">
                 <span class="tag">Letras</span>
                 <span class="tag">Filosofía</span>
@@ -482,7 +482,7 @@
                     <h2 class="component-title">Video de Bienvenida</h2>
                 </div>
                 <p class="component-description">
-                    Mensaje introductorio del equipo docente presentando la filosofía del curso, expectativas y metodología de trabajo colaborativo.
+                    Mensaje introductorio del equipo docente presentando la justificación pedagógica del curso, expectativas y metodología de trabajo colaborativo.
                 </p>
                 <div class="video-placeholder">
                     <i>▶</i>
@@ -531,14 +531,14 @@
                     <button class="btn btn-outline">📋 Ver Ejemplo de Preguntas</button>
                 </div>
             </article>
-            <!-- 2. Foro BarCafé de Egrestantes -->
+            <!-- 2. Ágora: Plaza Seca virtual -->
             <article class="welcome-component">
                 <div class="component-header">
                     <div class="component-icon forum-icon">💬</div>
-                    <h2 class="component-title">Foro "BarCafé de Egresantes"</h2>
+                    <h2 class="component-title">Ágora: Plaza Seca virtual"</h2>
                 </div>
                 <p class="component-description">
-                    Espacio informal de presentación personal, compartir expectativas y establecer vínculos con colegas investigadores de diferentes disciplinas.
+                    Espacio informal de presentación personal, compartir expectativas y establecer vínculos con colegas egresantes de todas las carreras
                 </p>
                 <div class="forum-preview">
                     <p><strong>Última actividad:</strong> María S. se presentó hace 2 horas</p>
