--- a/aula_virtual_bienvenida.html
+++ b/aula_virtual_bienvenida.html
@@ -459,7 +459,7 @@
     <div class="main-container">
         <!-- Título del curso -->
         <section class="course-title">
-            <h1>📤 Egresar/ Taller de apoyo metodológico transdisciplinar para egresantes de la FFyH</h1>
+            <h1>📤 Egresar – Taller de apoyo metodológico transdisciplinar para egresantes de la FFyH</h1>
             <p class="course-subtitle">Una propuesta de educación a distancia para acompañarte en los primeros pasos de investigación en el fin de la carrera</p>
             <div class="course-tags">
                 <span class="tag">Letras</span>
@@ -535,7 +535,7 @@
             <article class="welcome-component">
                 <div class="component-header">
                     <div class="component-icon forum-icon">💬</div>
-                    <h2 class="component-title">Ágora: Plaza Seca virtual"</h2>
+                    <h2 class="component-title">Ágora: Plaza Seca virtual</h2>
                 </div>
                 <p class="component-description">
                     Espacio informal de presentación personal, compartir expectativas y establecer vínculos con colegas egresantes de todas las carreras
